Kubernetes/velero-ui/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: velero-ui
  namespace: velero-ui
  annotations:
    keel.sh/policy: patch
    keel.sh/trigger: poll
spec:
  selector:
    matchLabels:
      name: velero-ui
  template:
    metadata:
      labels:
        name: velero-ui
    spec:
      serviceAccountName: velero-ui
      containers:
      - name: velero-ui
        image: otwld/velero-ui:latest
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: http
        readinessProbe:
          httpGet:
            path: /health
            port: http
